fixtures/runtime/invalid/constants/undefined.php
<?php
echo MISSING_RUNTIME_CONSTANT;
